--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -11,5 +11,4 @@
   padding: 5px;
   height: 30px;
   width: 100%;
-  margin-bottom: 30px;
 }
